# alpatrade

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.agui  Dockerfile.api  Dockerfile.fasthtml  README.md  TUI_README.md  ac.py  agui_app.py  alpaca_cli.py  alpaca_code.py  alpatrade.py  api_app.py  api_models.py  app.py  docker-compose.yaml  install.sh  main.py  pr.md  pyproject.toml  requirements-eval.txt  requirements.txt  run_agent.py  run_migration.py  skills.md  start_paper_trading.sh  test_tui.py  web_app.py
agents/: backtest_agent.py  orchestrator.py  paper_trade_agent.py  reconcile_agent.py  report_agent.py  validate_agent.py
config/: parameters.yaml
docs/: ag_ui_plan.md  agui_readme.md  auth_readme.md  autonomous-agent-team-plan.md  autonomy_benchmark_2026-07-18.md  autonomy_benchmark_2026-07-20.md  backtest_consolidated_summary_20260720T115214.md  backtest_summary_20260720T101932.md  eval_results.md  futures_box_wedge.md  index_readme.md  min_hold_swing_summary_20260720T120027.md  mobile-api.md  multi_account_guide.md  regulation_readme.md  streaming-chat.md  swagger.json  walk_forward_btd_20260720T105423.md
engine/: auth.py  config.py  market_map.py  voice.py
evals/: autonomy_cases.json  ground_truth.csv  judge.py  run_agent_evals.py  run_evals.py
scripts/: coolify_deploy.py  daily_pnl_report.py  framework_compare.py  generate_keys.py  linkedin_auth.py  linkedin_post.py  min_hold_swing_backtest.py  multi_horizon_report.py  notify_on_ship.py  run_paper_strategy.py  strategy_backtest_compare.py  verify_no_secrets.sh  walk_forward_btd.py
sql/: 01_create_backtest_summary.sql  02_create_individual_trades.sql  03_create_strategies.sql  04_create_scheduled_trades.sql  05_create_alpatrade_schema.sql  06_verify_alpatrade.sql  07_create_users_table.sql  08_add_user_id_columns.sql  09_migrate_existing_data.sql  10_add_positions_pnl_summary.sql  11_add_user_accounts.sql  12_add_password_reset_tokens.sql  13_create_chat_messages.sql  (+2 more)
(+136 files in other folders)
